@@ -82,5 +82,18 @@
 		{
 			return $this->items;
 		}
+		
+		/**
+		 * @return CollectionItem
+		**/
+		public function getByName($name)
+		{
+			return $this->items[$name];
+		}
+		
+		public function has($name)
+		{
+			return isset($this->items[$name]);
+		}
 	}
 ?>
